--- a/make.header.sample
+++ b/make.header.sample
@@ -48,6 +48,12 @@
 #                         JUnit test suite. See test/junit/README  #
 #                         for Java packages that must be located   #
 #                         here.                                    #
+#       NVM_TESTDIR     : directory for test suite to write files  #
+#                         intended for an NVM device. Defaults to  #
+#                         a temporary HDD directory. Setting this  #
+#                         to a directory on a RAM disk or on an    #
+#                         actual NVM device will accelerate the    #
+#                         NVM tests significantly.                 #
 #   - Modify target-specific location of Intel's pmem libraries    #
 #     (required only for NVL support):                             #
 #       PMEM_INCLUDES : include path for pmem                      #
@@ -149,6 +155,7 @@ endif
 #SPEC_CPU2006 =
 #SPEC_CFG =
 #JUNIT_CLASSPATH =
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES =
 #PMEM_LIBDIR =
@@ -216,6 +223,7 @@ FC = gfortran
 #SPEC_CPU2006 = /spec/cpu2006/1.0.1
 SPEC_CFG = spec-newark.cfg.in
 #JUNIT_CLASSPATH = /junit-4.11.jar:/hamcrest-core-1.3.jar:/system-rules-1.9.0.jar
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES = /pmem-git/src/include
 #PMEM_LIBDIR = /pmem-git/src/debug
@@ -270,6 +278,7 @@ FC = gfortran
 #SPEC_CPU2006 = /spec/cpu2006/1.0.1
 SPEC_CFG = spec-newark.cfg.in
 #JUNIT_CLASSPATH = /junit-4.11.jar:/hamcrest-core-1.3.jar:/system-rules-1.9.0.jar
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES = /home/f6l/work/tools/nvml/src/include
 #PMEM_LIBDIR = /home/f6l/work/tools/nvml/src/debug
@@ -310,6 +319,7 @@ FC = gfortran
 #SPEC_CPU2006 = /spec/cpu2006/1.0.1
 SPEC_CFG = spec-newark.cfg.in
 #JUNIT_CLASSPATH = /junit-4.11.jar:/hamcrest-core-1.3.jar:/system-rules-1.9.0.jar
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES = /pmem-git/src/include
 #PMEM_LIBDIR = /pmem-git/src/debug
@@ -351,6 +361,7 @@ FC = gfortran-mp-4.9
 SPEC_CPU2006 = /spec/cpu2006/1.0.1
 SPEC_CFG = spec-osx.cfg.in
 #JUNIT_CLASSPATH =
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES =
 #PMEM_LIBDIR =
@@ -392,6 +403,7 @@ GFRONTEND_DEBUG = -g
 #SPEC_CPU2006 =
 #SPEC_CFG =
 #JUNIT_CLASSPATH =
+#NVM_TESTDIR =
 
 #PMEM_INCLUDES =
 #PMEM_LIBDIR =
