Add dynamic memory alignment for Altera FPGA.

--- a/make.header.sample
+++ b/make.header.sample
@@ -125,7 +125,7 @@ ifeq ($(OPENARC_ARCH), 0)
 BACKENDCXX = CC
 CC_FLAGS_PREFIX =
 GBACKEND_FLAGS = -O3
-GBACKEND_INCLUDES = -I/opt/nvidia/cudatoolkit/5.5.20-1.0402.7700.8.1/include
+GBACKEND_INCLUDES = -I/opt/nvidia/cudatoolkit7.0/7.0.28-1.0502.10280.4.1/include
 GBACKEND_LIBS = 
 GBACKEND_DEBUG = -g -G
 GFRONTEND_FLAGS = -O3
@@ -136,7 +136,7 @@ else
 BACKENDCXX = CC
 CC_FLAGS_PREFIX =
 GBACKEND_FLAGS = -O3
-GBACKEND_INCLUDES = -I/opt/nvidia/cudatoolkit/5.5.20-1.0402.7700.8.1/include
+GBACKEND_INCLUDES = -I/opt/nvidia/cudatoolkit7.0/7.0.28-1.0502.10280.4.1/include
 GBACKEND_LIBS =
 GBACKEND_DEBUG = -g
 GFRONTEND_FLAGS = -O3
@@ -301,12 +301,12 @@ GPROFILEMACROS = -D _OPENARC_PROFILE_=1
 BACKENDCXX = g++
 CC_FLAGS_PREFIX = 
 GBACKEND_FLAGS = -O3
-GBACKEND_INCLUDES = -I/opt/AMDAPP/include
-GBACKEND_LIBS = -lOpenCL
+GBACKEND_INCLUDES = -I/opt/AMDAPPSDK-3.0/include
+GBACKEND_LIBS = -L/opt/AMDAPPSDK-3.0/lib/x86_64 -lOpenCL
 GBACKEND_DEBUG = -g
 GFRONTEND_FLAGS = -O3
 GFRONTEND_INCLUDES = -I$(OPENARCLIB)
-GFRONTEND_LIBS = -L$(OPENARCLIB) -lOpenCL
+GFRONTEND_LIBS = -L$(OPENARCLIB) -L/opt/AMDAPPSDK-3.0/lib/x86_64 -lOpenCL
 GFRONTEND_DEBUG = -g
 
 LLVM_TARGET_TRIPLE = x86_64-redhat-linux-gnu
