Add error-code-printing code to OpenARC runtime. Update translation passes to handle OpenARC directives on OpenACC API calls.

--- a/make.header.sample
+++ b/make.header.sample
@@ -337,9 +337,13 @@ GOMP_LIBS = -lgomp
 CC = gcc-apple-4.2
 CXX = g++-apple-4.2
 CPP = $(CC) -E -std=c99
+#CC = mpicc -std=c99
+#CXX = mpicxx
+#CPP = gcc -E -std=c99
 GMACROS = -DOPENARC_ARCH=$(OPENARC_ARCH)
 GPROFILEMACROS = -D_OPENARC_PROFILE_=1
 BACKENDCXX = g++-apple-4.2
+#BACKENDCXX = mpicxx
 CC_FLAGS_PREFIX = 
 #GBACKEND_FLAGS = -arch i386 -arch x86_64
 GBACKEND_FLAGS = -arch x86_64
