Optimize ACCLoopDirectivePreprocessor to better handle nested indpendent loops. Add Mandelbrot benchmark Update README file and OpenARC runtime.

--- a/test/openarcConf.sample
+++ b/test/openarcConf.sample
@@ -772,7 +772,7 @@
 #############################
 #acc2gpu=1
 #omp2acc=N
-targetArch=0
+#targetArch=0
 #AccAnalysisOnly=1
 #SkipGPUTranslation=N
 #showInternalAnnotations=1
